# acqu

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL.sh  Makefile  README.dlh  README.md  setup.csh  setup.sh
CaLib/: .gitignore  CMakeLists.txt  Makefile  README  rootlogon.C  runset_overview.root
CaLib/config/: config.cfg  example.cfg
CaLib/data/: MC_PID.root  MC_Veto.root  data.def  types.def
CaLib/include/: LinkDef.h  TCCalib.h  TCCalibCBTimeWalk.h  TCCalibData.h  TCCalibDiscrThr.h  TCCalibEnergy.h  TCCalibPIDDroop.h  TCCalibPIDEnergy.h  TCCalibPIDEnergyTrad.h  TCCalibPIDPhi.h  TCCalibPed.h  TCCalibQuadEnergy.h  TCCalibTAPSEnergySG.h  TCCalibTAPSPSA.h  TCCalibTargetPosition.h  TCCalibTime.h  TCCalibType.h  TCCalibVetoCorr.h  TCCalibVetoEnergy.h  TCConfig.h  TCContainer.h  TCFileManager.h  TCFitTools.h  TCMySQLManager.h  TCReadACQU.h  TCReadARCalib.h  TCReadConfig.h  TCUtils.h  TCWriteARCalib.h
CaLib/macros/: AddBeamtime.C  AddCalibMC.C  AddSet.C  AddTable.C  Calibrate.C  CalibrateGUI.C  CloneCalib.C  ConvertCaLib.C  Display.C  Export.C  Import.C  InspectDump.C  Install.C  RemoveSet.C  SplitSet.C  WriteARCalibration.C  WriteParASCII.C
CaLib/macros/check/: CBEnergy.C  CBRiseTime.C  CBTime.C  PIDEnergy.C  PIDTime.C  TAPSEnergy.C  TAPSTime.C  TaggerTime.C  VetoTime.C
CaLib/macros/runsets/: CBEnergy.C  CBTime.C  PIDEnergy.C  PIDTime.C  TAPSEnergy.C  TAPSPed.C  TAPSPulser.C  TAPSSG.C  TAPSTime.C  TaggerTime.C  VetoEnergy.C  VetoTime.C
CaLib/src/: MainCaLibManager.cxx  TCCalib.cxx  TCCalibCBTimeWalk.cxx  TCCalibData.cxx  TCCalibDiscrThr.cxx  TCCalibEnergy.cxx  TCCalibPIDDroop.cxx  TCCalibPIDEnergy.cxx  TCCalibPIDEnergyTrad.cxx  TCCalibPIDPhi.cxx  TCCalibPed.cxx  TCCalibQuadEnergy.cxx  TCCalibTAPSEnergySG.cxx  TCCalibTAPSPSA.cxx  TCCalibTargetPosition.cxx  TCCalibTime.cxx  TCCalibType.cxx  TCCalibVetoCorr.cxx  TCCalibVetoEnergy.cxx  TCConfig.cxx  TCContainer.cxx  TCFileManager.cxx  TCFitTools.cxx  TCMySQLManager.cxx  TCReadACQU.cxx  TCReadARCalib.cxx  TCReadConfig.cxx  TCUtils.cxx  TCWriteARCalib.cxx  htmldoc.C
OSCAR/: .gitignore  CMakeLists.txt  Makefile  README
OSCAR/A2/: Makefile
OSCAR/A2/include/: TOA2BaseDetParticle.h  TOA2DetParticle.h  TOA2Detector.h  TOA2Event.h  TOA2MCEvent.h  TOA2MCParticle.h  TOA2RecEta2g.h  TOA2RecEta6g.h  TOA2RecEtaPi0.h  TOA2RecEtaPrime.h  TOA2RecK0Lambda.h  TOA2RecMultiParticle.h  TOA2RecParticle.h  TOA2RecPi02g.h  TOA2RecPi0Pi0.h  TOA2ScalerEvent.h  TOA2TaggerHit.h  TOA2Trigger.h
OSCAR/A2/src/: TOA2BaseDetParticle.cxx  TOA2DetParticle.cxx  TOA2Detector.cxx  TOA2Event.cxx  TOA2MCEvent.cxx  TOA2MCParticle.cxx  TOA2RecEta2g.cxx  TOA2RecEta6g.cxx  TOA2RecEtaPi0.cxx  TOA2RecEtaPrime.cxx  TOA2RecK0Lambda.cxx  TOA2RecMultiParticle.cxx  TOA2RecParticle.cxx  TOA2RecPi02g.cxx  TOA2RecPi0Pi0.cxx  TOA2ScalerEvent.cxx  TOA2TaggerHit.cxx  TOA2Trigger.cxx
OSCAR/MC/: Makefile
OSCAR/MC/include/: TOMCParticle.h
OSCAR/MC/src/: TOMCParticle.cxx
OSCAR/analysis/: Makefile
OSCAR/analysis/include/: TOFermiDistribution.h  TOKinCut.h  TOPhysics.h
OSCAR/analysis/src/: TOFermiDistribution.cxx  TOKinCut.cxx  TOPhysics.cxx
OSCAR/main/: Makefile
OSCAR/main/include/: LinkDef.h  TOGlobals.h  TOVersion.h
OSCAR/main/src/: MainOSCARConfig.cxx  TOGlobals.cxx  htmldoc.C
OSCAR/math/: Makefile
OSCAR/math/include/: TOF1.h  TOF1BW.h  TOF1BW_S11_1535.h  TOF1Empty.h  TOF1Expo.h  TOF1G.h  TOF1Gauss.h  TOF1GaussTail.h  TOF1H.h  TOF1LegPol.h  TOF1Pol.h  TOFCM.h  TOFuncManager.h  TOPairCombinations.h  TOdFCM.h
OSCAR/math/src/: TOF1.cxx  TOF1BW.cxx  TOF1BW_S11_1535.cxx  TOF1Empty.cxx  TOF1Expo.cxx  TOF1G.cxx  (+9 more)
OSCAR/utils/: Makefile
Worker/: .gitignore  CMakeLists.txt
Worker/A2/: .gitignore  Makefile  PPi0.mac
Worker/AR/: .gitignore  Makefile
Worker/src/: TProcessor.h  WorkerLinkDef.h
acqu_core/: .gitignore  CMakeLists.txt  Makefile  README  Release.Notes  acqu_setup
acqu_core/User/: .acqurc  .rootrc  .tcshrc  README
acqu_core/ezcaRoot/: README
acqu_core/lib/: .gitignore
acqu_user/: .gitignore  CMakeLists.txt  CaLibReader_t.h  MCUserLinkDef.h  MainAcquMC.cc  Makefile  MyHitClusterTAPS_t.cc  README  TA2CalArray.h  TA2FPMicro.cc  TA2MyAnalysis.h  TA2MyCaLib.cc  TA2MyCaLib.h  TA2MyCalibration.h  TA2MyClusterCalib.h  TA2MyCrystalBall.h  TA2MyPhysics.cc  TA2MyRateEstimation.cc  TA2MyRateEstimation.h  TA2MyTAPS.h  TA2MyTAPS_BaF2PWO.cc  TA2PlasticPID.cc  TA2PlasticPID.h  TA2PlasticVETO.cc  TA2UserAnalysis.cc  TA2UserAnalysis.h  TA2UserControl.cc  TA2UserControl.h  TMCUserGenerator.h  TMCUserParticle.h  UserDict.h  UserLinkDef.h  data  evgen  includes  simfiles
acqu_user/Data_12_2008/: Trigger.Rate
acqu_user/Data_12_2012/: TAPS.pat  VetoBaF2_dEvE.root
acqu_user/Data_MC/: A2.MC  TAPS_Cut_DeltaE-E.root  TAPS_Cut_TOF.root  v2u_450_plot.ehist
acqu_user/data.2008.12/: A2.Offline  ProtonPID.root
acqu_user/data.2012.12/: A2.Offline  TAPS_Cut_TOF_LoT.root
acqu_user/data.2013.06/: CBTaggTAPS.Offline  CB_Cut_NaI_MWPC.root  CB_Cut_PID_MWPC.root  TAPS.pat  TAPS_Cut_TOF.root  TaggEff.Offline  TaggEnr_Jun2013.txt  Trigger.Pat  ugcal_883.plot.ghist
acqu_user/data.MC/: A2.MC  CB_Cut_DeltaE-E_Proton.root  TAPS_Cut_TOF_2.root  v2u_450_plot.ghist
acqu_user/data.mc/: CB.450  CBTaggerTAPS.450  CBTaggerTAPS_Analysis.450  CBTaggerTAPS_Server.450  CB_Cut_DeltaE-E_Piplus.root  CB_NaI.450  CB_NaI_Gain.txt  CB_NaI_Thres.txt  CB_PID2.450  Pi0.450  TAPS.450  TAPS_BaF2-PbWO4.450  TAPS_BaF2-PbWO4_Thres.txt  TAPS_BaF2_Thres.txt  TAPS_Cut_DeltaE-E.root  TAPS_Cut_TOF.root  TAPS_Veto.450  Tagger.450  Tagger_Ladder_Average.450  Trigger_Rate.450  Trigger_SumModel.txt
acqu_user/data.misc/: CB.450  CBTaggerTAPS.450  CBTaggerTAPS_Analysis.450  CBTaggerTAPS_Server.450  CB_NaI.450  CB_NaI_Gain.txt  CB_NaI_Thres.txt  CB_PID2.450  Eta_Cut_NoTime.txt  Pi0.450  Pi0_Cut_Time.txt  TAPS.450  TAPS_BaF2-PbWO4.450  TAPS_BaF2-PbWO4_Thres.txt  TAPS_BaF2_Thres.txt  TAPS_Veto.450  Tagger.450  Tagger_Ladder_Butanol.450  Trigger_Pattern.450  Trigger_SumModel.txt
acqu_user/includes/: functions.h  functions2.h
acqu_user/root/: HitD2A_t.h  MCBranchID.h  TA2Detector.cc  TA2Detector.h
(+497 files in other folders)
